Minor DESCRIPTION change

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: Faraday.Pricing
-Title: Faraday Pricing R Utilities
+Title: Faraday Pricing - R Utilities
 Version: 1.0
 Date: 2015-02-02
 Author: Johnathan McCabe and Bingyan Hong
