--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,4 +6,5 @@ Author: Johnathan McCabe and Bingyan Hong
 Maintainer: Johnathan McCabe and Bingyan Hong <johnathan.mccabe@faraday.com>
 Description: This package contains some utility functions for use in pricing
 Depends: R (>= 3.1.3), dplyr, reshape2, RODBCext, stringr
+Suggests: testthat
 License: GPL-2
