--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,6 +5,6 @@ Date: 2015-02-02
 Author: Johnathan McCabe and Bingyan Hong
 Maintainer: Johnathan McCabe and Bingyan Hong <johnathan.mccabe@faraday.com>
 Description: This package contains some utility functions for use in pricing
-Depends: R (>= 3.1.3), dplyr, reshape2, RODBCext, stringr, rootSolve
+Depends: R (>= 3.1.3), dplyr, reshape2, RODBCext, stringr, rootSolve, stringdist
 Suggests: testthat
 License: GPL-2
